2012-04-17
* replace glob.glob() with our own filtering. This prevents os.listdir() from
being called numerous times

2012-03-29
* add a very simplistic method to tag binary XML for Android (file name check,
plus the first four bytes)

2012-03-26
* add tool to check whether or not a binary + libraries can be combined at
runtime
* replace piechart generation using external script and pychart with
matplotlib. It's faster, doesn't require an external script and better fits
the license.

2012-03-24
* remove unused and no longer maintained file

2012-03-21
* pass size hints, if available

2012-03-19
* also pass top level scan directory to postrunscans

2012-03-18
* add code to determineinformation about correlation between packages for
non-unique matches.

2012-03-11
* move the unpacking to a directory called 'data'. Dump the state of the
program in a pickle so it can be read back for later use.
* remove hardcoded paths from the data that is pickled. This makes it easier
to relocate the results for future processing.

2012-03-08
* add script that uses hexdump -Cv to generate files to be used in a GUI. It's
faster than writing our own.

2012-03-01
* revive knowledgebase idea, but now as a pretty printer

2012-02-28
* make pretty printer configurable

2012-02-27
* rework BusyBox configuration extraction: some things could be done a lot
easier and also give better results.
* add romfs unpacking using romfsck. Not enabled by default, since it needs
some more cleanups
* add romfsck to bat-extratools

2012-02-26
* work around standard behaviour in xgettext that caused strings to be not
extracted

2012-02-24
* split caching database per language family
* determine version based on strings extracted from the binary
* determine licenses based on strings extracted from the binary plus a large
database of licenses extracted from source code using Ninka

2012-02-23
* start moving maintenance scripts into the 'maintenance' directory
* add code to generate images of files

2012-02-22